# serializer version: 1
# name: test_script_ok[script_multi]
  '''
  start
    query_statement
      script
        query_expr
          bigquery__select
            bigquery__select_list
              bigquery__select_item
                bigquery__select_expr
                  bigquery__column_expr
                    bigquery__ident	col1
            bigquery__select_from
              bigquery__from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    bigquery__ident	table1
        script_item
          query_statement
            query_expr
              bigquery__select
                bigquery__select_list
                  bigquery__select_item
                    bigquery__select_expr
                      bigquery__column_expr
                        bigquery__ident	col2
                bigquery__select_from
                  bigquery__from_clause
                    bigquery__from_item_table
                      bigquery__path_expression
                        bigquery__ident	table2
  
  '''
# ---
# name: test_script_ok[script_multi_with_trailing_semi]
  '''
  start
    query_statement
      script
        query_expr
          bigquery__select
            bigquery__select_list
              bigquery__select_item
                bigquery__select_expr
                  bigquery__column_expr
                    bigquery__ident	col1
            bigquery__select_from
              bigquery__from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    bigquery__ident	table1
        script_item
          query_statement
            script
              query_expr
                bigquery__select
                  bigquery__select_list
                    bigquery__select_item
                      bigquery__select_expr
                        bigquery__column_expr
                          bigquery__ident	col2
                  bigquery__select_from
                    bigquery__from_clause
                      bigquery__from_item_table
                        bigquery__path_expression
                          bigquery__ident	table2
              script_item
  
  '''
# ---
# name: test_script_ok[script_single]
  '''
  start
    query_statement
      script
        query_expr
          bigquery__select
            bigquery__select_list
              bigquery__select_item
                bigquery__select_expr
                  bigquery__column_expr
                    bigquery__ident	col1
            bigquery__select_from
              bigquery__from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    bigquery__ident	table1
        script_item
  
  '''
# ---
